y.output
State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement
    4               | ε

    5 statement: expression STOREOP VAR

    6 expression: NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STOREOP (258) 5
    VAR (259) 5
    NUM (260) 6


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    program (7)
        on left: 1
        on right: 0
    statement_list (8)
        on left: 2 3 4
        on right: 1 3
    statement (9)
        on left: 5
        on right: 2 3
    expression (10)
        on left: 6
        on right: 5


State 0

    0 $accept: • program $end

    NUM  shift, and go to state 1

    NUM       [reduce using rule 4 (statement_list)]
    $default  reduce using rule 4 (statement_list)

    program         go to state 2
    statement_list  go to state 3
    statement       go to state 4
    expression      go to state 5

    shift/reduce conflict on token NUM:
        4 statement_list: ε •
        6 expression: • NUM
      Example: • NUM STOREOP VAR
      Shift derivation
        statement_list
        ↳ 2: statement
             ↳ 5: expression STOREOP VAR
                  ↳ 6: • NUM
      Reduce derivation
        statement_list
        ↳ 3: statement_list statement
             ↳ 4: ε •       ↳ 5: expression STOREOP VAR
                                 ↳ 6: NUM



State 1

    6 expression: NUM •

    $default  reduce using rule 6 (expression)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: statement_list •
    3 statement_list: statement_list • statement

    NUM  shift, and go to state 1

    $default  reduce using rule 1 (program)

    statement   go to state 7
    expression  go to state 5


State 4

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 5

    5 statement: expression • STOREOP VAR

    STOREOP  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 8

    5 statement: expression STOREOP • VAR

    VAR  shift, and go to state 9


State 9

    5 statement: expression STOREOP VAR •

    $default  reduce using rule 5 (statement)
